get_athletes_by_year done finished complete workin

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ collegebball/spiders/__pycache__/rosters.cpython-310.pyc
 collegebball/spiders/__pycache__/seasons.cpython-310.pyc
 collegebball/spiders/__pycache__/team_spider.cpython-310.pyc
 scripts/__pycache__/__init__.cpython-310.pyc
+athlete_details_reinsert.log
