--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ scripts/__pycache__/__init__.cpython-310.pyc
 athlete_details_reinsert.log
 collegebball/spiders/__pycache__/player_stats.cpython-310.pyc
 collegebball/spiders/__pycache__/bookies.cpython-310.pyc
+scripts/master_flow.txt
+collegebball/spiders/__pycache__/conferences.cpython-310.pyc
+collegebball/spiders/__pycache__/event_odds.cpython-310.pyc
+collegebball/spiders/__pycache__/team_outcomes.cpython-310.pyc
+.vscode/launch.json
