--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ collegebball/spiders/__pycache__/conferences.cpython-310.pyc
 collegebball/spiders/__pycache__/event_odds.cpython-310.pyc
 collegebball/spiders/__pycache__/team_outcomes.cpython-310.pyc
 .vscode/launch.json
+collegebball/__pycache__/database.cpython-311.pyc
+.gitignore
+collegebball/__pycache__/__init__.cpython-311.pyc
+collegebball/spiders/__pycache__/event_odds_details.cpython-310.pyc
+collegebball/spiders/__pycache__/event_odds_lines.cpython-310.pyc
